# Cripper

./: .gitignore  AGENTS.md  CLAUDE.md  ENCRYPTION_FLOW.md  README.md  debug.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
cripper/: cli.py  config.py  crypto.py  engitcrypt.py  util.py
doc/source/: api.rst  api_zh.rst  conf.py  index.rst  index_zh.rst  usage.rst  usage_zh.rst
doc/source/_templates/: layout.html
test/: test_ignore.py
test/fixture/: temp_file.txt
test/fixture/src/deep/nested/test/: test_deep.py
