[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cripper"
version = "0.3.2"
description = "Clipboard-based file & directory encryption tool"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Cripper contributors" },
]
dependencies = [
    "click>=8.0",
    "cryptography>=3.0",
    "py-walk>=0.3.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
doc = [
    "sphinx>=9.0",
    "sphinx-rtd-theme>=3.0",
]
dev = [
    "cripper[doc]",
    "pytest>=9.0",
]

[project.scripts]
cripper = "cripper.cli:main"
encripper  = "cripper.cli:main_encripper"
decripper   = "cripper.cli:main_decripper"
engitcrypt  = "cripper.engitcrypt:main_engitcrypt"

[tool.setuptools.packages.find]
include = ["cripper*"]
